--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 
 </head>
 <body>
+<main>
   <div class="box">
     <img src="images/image-qr-code.png" alt="qrcode">
     <h2>Improve your front-end skills by building projects</h2>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
   </div>
-  
+</main>
 </body>
 </html>
